--- a/smart-chat-frontend/package.json
+++ b/smart-chat-frontend/package.json
@@ -32,6 +32,7 @@
     "@angular/compiler-cli": "^20.0.0",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
