--- a/smart-chat-frontend/package.json
+++ b/smart-chat-frontend/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:smart-chat-frontend": "node dist/smart-chat-frontend/server/server.mjs"
+    "serve:ssr:smart-chat-frontend": "node dist/smart-chat-frontend/server/server.mjs",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -32,14 +33,17 @@
     "@angular/compiler-cli": "^20.0.0",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
-    "@types/jest": "^29.5.14",
     "@types/node": "^20.17.19",
+    "angular-eslint": "19.6.0",
+    "eslint": "^9.27.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "prettier": "^3.5.3",
+    "typescript": "~5.8.2",
+    "typescript-eslint": "8.32.1"
   }
 }
