--- a/smart_chat_frontend/pubspec.yaml
+++ b/smart_chat_frontend/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.1.0
+  flutter_hooks: ^0.20.5
 
 dev_dependencies:
   flutter_test:
