--- a/smart_chat_frontend/pubspec.yaml
+++ b/smart_chat_frontend/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   provider: ^6.1.0
   flutter_hooks: ^0.20.5
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
