--- a/smart_chat_frontend/pubspec.yaml
+++ b/smart_chat_frontend/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   provider: ^6.1.0
   flutter_hooks: ^0.20.5
   http: ^1.1.0
+  share_plus: ^6.3.0
 
 dev_dependencies:
   flutter_test:
